Backplane_FPGA/.../BrdCfg_48RENA...: Connect RENA 2
Now there is RENA0 and RENA2  (Frontend board 0 and Frontend board 2)
connected.

--- a/Backplane_FPGA/10_BrdCfgs/BrdCfg_48RENA_50MHzSMA/BrdCfg_48RENA_50MHzSMA.ucf
+++ b/Backplane_FPGA/10_BrdCfgs/BrdCfg_48RENA_50MHzSMA/BrdCfg_48RENA_50MHzSMA.ucf
@@ -37,10 +37,10 @@ NET "compare_result" LOC = L34;
 
 #Clock pin for probing
 NET "debug_clk_50MHz" LOC = H33;  # HDR J6 - Pin 2
+#RENA/Frontend Board Connections
 NET "rena_tx" LOC = AN33;         # HDR J6 - Pin 64
-NET "rena0_rx" LOC = P34;         # HDR J4 - Pin 16
-
-
+NET "rena0_rx" LOC = P34;         # HDR J6 - Pin 22
+NET "rena2_rx" LOC = T34;         # HDR J4 - Pin 22
 
 
 # GTP
