--- a/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
+++ b/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
@@ -1,42 +1,45 @@
+#
+#
+# Important note:
+# Voltages are set to 2.5 Volts, even though the system runs at 3.3V. This could cause problems
+# with drive strengths and such, but I am not exactly sure what.
+#
+# The reason this was done as follows:
+# 1) The LVDS input clock spec needs to use a 2.5V LVDS source to work optimally. In our case
+#    it is actually 3.3V. The problem that arises from this is the built in termination
+#    will have the wrong value. We are just going to live with this for now.
+# 2) We need to specify voltages to specify input types if we don't want any single ended
+#    inputs to be treated as differential inputs.
+# 3) All these pins are in the same banks, banks are all the same voltage. So we have to make
+#    it think 2.5V for the LVDS clock to work, per #1.
+#
 
 #NET "." TNM_NET = "clk_50MHz";
 #TIMEGRP Grpclk_50MHz =  "clk_50MHz";
 #TIMESPEC TS_clk_50 = PERIOD "Grpclk_50MHz" 12 ns HIGH 50 %
 
 # Reset
-NET "reset" LOC = AN33 | CLOCK_DEDICATED_ROUTE = "FALSE"; # HDR J6 - Pin 64
+NET "reset" LOC = AN33 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* HDR J6 - Pin 64 */
+#NET "reset" LOC = AN32 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* HDR J4 - Pin 64 */
 
 # Clocks
-NET "clk_200MHz" LOC = L19 | TNM_NET = "clk_200MHz";
+NET "clk_200MHz" LOC = L19 | IOSTANDARD = LVCMOS25 | TNM_NET = "clk_200MHz";
 TIMEGRP Grpclk_200MHz =  "clk_200MHz";
-TIMESPEC TS_clk_200 = PERIOD "Grpclk_200MHz" 5000 ps HIGH 50 %;
+TIMESPEC TS_clk_200 = PERIOD "Grpclk_200MHz" 4300 ps HIGH 50 %;
 
-# for my Spartan board
-#NET "Tx" LOC = L33;
-#NET "Rx[0]" LOC = M32;
-#NET "Rx[1]" LOC = AK33;
-#NET "Rx0" LOC = M32;
-#NET "Rx1" LOC = AK33;
-#NET "clk_12MHz" LOC = J32;
-#NET "Reset_out" LOC = J34;
-#NET "Spartan_signal_input" LOC = AK7;
-#NET "Spartan_signal_output" LOC = H32;
+#Debug pin
+NET "compare_result" LOC = L34 | IOSTANDARD = LVCMOS25;
 
-NET "compare_result" LOC = L34;
+#Clock pin for probing
+NET "debug_clk_50MHz" LOC = H33 | IOSTANDARD = LVCMOS25;  /* HDR J6 - Pin 2 */
 
-# for Yi's Spartan board
-NET "rena0_clk_50MHz" LOC = G32;  # HDR J6 - Pin 10
-NET "rena0_rx" LOC = M32;         # HDR J6 - Pin 20
-NET "rena0_tx" LOC = Y34;         # HDR J6 - Pin 30
-
-NET "rena1_clk_50MHz" LOC = AK32; # HDR J6 - Pin 50
-NET "rena1_rx" LOC = AL34;        # HDR J6 - Pin 52
-NET "rena1_tx" LOC = AL33;        # HDR J6 - Pin 54
+#RENA/Frontend Board Connections
+NET "frontend_clk_50MHz" LOC = AK32 | IOSTANDARD = LVCMOS25;  # HDR J6 - Pin 50
+NET "frontend_tx" LOC = AL33 | IOSTANDARD = LVCMOS25;         # HDR J6 - Pin 54
+NET "frontend_rx" LOC = AL34 | IOSTANDARD = LVCMOS25;         # HDR J6 - Pin 52
 
 
-
-
-# GTP
+# GTP - SATA Cables
 INST "Inst_datatransmission/Inst_GTP_module/inst_diff" LOC = BUFDS_X0Y3;
 NET "gtp_clkp_pin" LOC = Y4;
 NET "gtp_clkn_pin" LOC = Y3;
