--- a/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
+++ b/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
@@ -34,6 +34,7 @@ NET "compare_result" LOC = L34 | IOSTANDARD = LVCMOS25;
 NET "debug_clk_50MHz" LOC = H33 | IOSTANDARD = LVCMOS25;  /* HDR J6 - Pin 2 */
 
 #RENA/Frontend Board Connections
+NET "frontend_reset" LOC = AJ32 | IOSTANDARD = LVCMOS25;      # HDR J6 - Pin 48
 NET "frontend_clk_50MHz" LOC = AK32 | IOSTANDARD = LVCMOS25;  # HDR J6 - Pin 50
 NET "frontend_tx" LOC = AL33 | IOSTANDARD = LVCMOS25;         # HDR J6 - Pin 54
 NET "frontend_rx" LOC = AL34 | IOSTANDARD = LVCMOS25;         # HDR J6 - Pin 52
