Backplane_FPGA: BrdCfg_1RENA_200MHz change reset to south switch.
Can now push the south button on the virtex 5 board to reset the
node (and it's children boards).

--- a/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
+++ b/Backplane_FPGA/10_BrdCfgs/BrdCfg_1RENA_200MHzOnboard/BrdCfg_1RENA_200MHzOnboard.ucf
@@ -19,7 +19,8 @@
 #TIMESPEC TS_clk_50 = PERIOD "Grpclk_50MHz" 12 ns HIGH 50 %
 
 # Reset
-NET "reset" LOC = AN33 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* HDR J6 - Pin 64 */
+#NET "reset" LOC = AN33 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* HDR J6 - Pin 64 */
+NET "reset" LOC = V8 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* SW11 - South Switch */
 #NET "reset" LOC = AN32 | IOSTANDARD = LVCMOS25 | CLOCK_DEDICATED_ROUTE = "FALSE"; /* HDR J4 - Pin 64 */
 
 # Clocks
